--- a/text-translation-app/package.json
+++ b/text-translation-app/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@azure-rest/ai-translation-text": "^1.0.0-beta.1"
+    "@azure-rest/ai-translation-text": "^1.0.0-beta.1",
+    "pip": "^0.0.1"
   }
 }
