--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
     "fetch": "^1.1.0",
-    "geolib": "^3.3.4"
+    "geolib": "^3.3.4",
+    "touch": "^3.1.0"
   }
 }
